fixed margin on header on mobile

--- a/style.css
+++ b/style.css
@@ -247,9 +247,14 @@ p:hover {
     to   { opacity: 1; }
 }
 
-@media (max-width: 590px) {
+@media (max-width: 660px) {
     .header {
         flex-direction: column;
+    }
+    ul {
+      margin-left: 60px;
+
+
     }
     @-webkit-keyframes moveY {
         from { top: 130px; } to { top: -webkit-calc(100% - 100px); }
